[package]
name = "learn-gamepads"
version = "0.1.0"
edition = "2021"
authors=["AlexanderARodin"]

##  ##  ##  ##  ##  ##  ##  ##
[dependencies]
eyre.workspace = true
raalog.workspace = true
ratatui.workspace = true
gamepads.workspace = true
hecs.workspace = true

app_raa_tui = { path = "crates/app_raa_tui" }
event_handler = { path = "crates/event_handler" }
gamepad_handler = { path = "crates/gamepad_handler" }
cells_world = { path = "crates/cells_world" }
hecs_wrapper = { path = "crates/hecs_wrapper" }
arithm2d = { path = "crates/arithm2d" }
#ecs_raa = { path = "crates/ecs_raa" }

##  ##  ##  ##  ##  ##  ##  ##
[workspace]
resolver = "2"
members = [
	"crates/event_handler",
	"crates/gamepad_handler",
	"crates/app_raa_tui",
	"crates/cells_world",
	#"crates/ecs_raa",
	"crates/hecs_wrapper",
	"crates/arithm2d",
]

[workspace.dependencies]
eyre = "0.6.12"
hecs = "0.10.5"
ratatui = "0.29.0"
gamepads = "0.1.6"
raalog = { git = "https://github.com/AlexanderARodin/raalog.git", branch = "main" }
