[package]
name = "hecs_wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre.workspace = true
raalog.workspace = true
hecs.workspace = true
num-complex.workspace = true
arithm2d = { path = "../arithm2d" }
cells_world = { path = "../cells_world" }
cells_space = { path = "../cells_space" }
rand = "0.9.0"
